# any2any_trainer

./: .gitignore  DATA_FORMAT.md  GETTING_STARTED.md  HF_MODELS_USAGE.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  demo_smart_config.py  pyproject.toml  test_installation.py
accelerate/: fsdp_config.yaml
configs/any2any/: anygpt_style_training.yaml
configs/sft/: any2any_flow.yaml  hf_multimodal_training.yaml  llava_style_training.yaml  llava_training.yaml  multimodal_flow.yaml  multimodal_test.yaml  multimodal_working.yaml  simple_hf_training.yaml  simple_modality_flow.yaml  simple_multimodal.yaml
configs/test/: minimal_test.yaml
deepspeed_configs/: zero2_config.json
my_first_model/checkpoint-500/: adapter_config.json  trainer_state.json  training_config.yaml
scripts/: train_multimodal.py
src/any2any_trainer/: __init__.py
src/any2any_trainer/data/: dataset.py
src/any2any_trainer/models/: __init__.py  any2any.py  factory.py  multimodal.py
src/any2any_trainer/training/: __init__.py  trainer.py
src/any2any_trainer/utils/: config.py
