[tool.poetry]
name = "any2any-trainer"
version = "0.1.0"
description = "Universal Multimodal Training Toolkit for Any-to-Any Models"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "any2any_trainer", from = "src"}]

[tool.poetry.dependencies]
python = "3.10.*"
torch = ">=2.6.0,<3.0.0"
torchvision = ">=0.19.0,<1.0.0"
transformers = "^4.52.4"
peft = "^0.12.0"
accelerate = "^1.6.0"
deepspeed = {platform = 'linux', version = "==0.14.5"}
datasets = "^3.5.0"
evaluate = "^0.4.2"
pydantic = "^2.6.4"
pyyaml = "^6.0.0"
rich = "^13.5.0"
wandb = "^0.19.6"
clearml = "^1.16.1"
bitsandbytes = "^0.45.2"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["any2any_trainer"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 